--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Power-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Power-Strings.json
@@ -136,5 +136,11 @@
       " #yBrew card.",
       " #yBrew cards."
     ]
+  },
+  "theBrewmaster:SearingChainPower": {
+    "NAME": "Searing Chain",
+    "DESCRIPTIONS": [
+      "#yDrenched isn't removed when this enemy takes damage."
+    ]
   }
 }
