--- a/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Power-Strings.json
+++ b/theBrewmaster/src/main/resources/theBrewmasterResources/localization/eng/BrewmasterMod-Power-Strings.json
@@ -142,5 +142,12 @@
     "DESCRIPTIONS": [
       "#yDrenched isn't removed when this enemy takes damage."
     ]
+  },
+  "theBrewmaster:ChampagneHosePower": {
+    "NAME": "Champagne Hose",
+    "DESCRIPTIONS": [
+      "At the start of your turn, apply #b",
+      " #yDrenched to ALL enemies."
+    ]
   }
 }
